--- a/src/pages/sidemenu/sidebar.css
+++ b/src/pages/sidemenu/sidebar.css
@@ -1,37 +1,41 @@
 .side-nav {
   max-width: 50%;
   min-width: 280px;
-  height: 100%;
-  box-shadow: 11px 3px 25px rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.4);
   position: absolute;
   top: 0px;
   left: 0px;
+  overflow: hidden;
+}
+
+.side-nav a {
+  text-decoration: none;
 }
 
 .side-nav-head {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   background-color: rgba(255, 255, 255, 0.03);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
-#logo {
+.side-nav-head img {
   width: 5rem;
 }
 
-.logo {
+.side-nav a {
   text-decoration: none;
 }
 
-
 .side-nav-body {
-  width: 100%;
-  height: 100%;
   background-color: #10121d;
+  height: 100%;
 }
 
 .side-nav-items {
   padding-left: 0.1em;
-  margin-top: 0px;
+  margin: 0px;
 }
